# VocalVoyage

./: .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  docker-compose.yml  document.fish  document.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.py  start_dev.fish  start_dev.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  code-quality.yml  main.yml  publish.yml  tests.yml
app/:  __init__.py  main.py
app/data/: testi.csv  words.csv
app/domain/: __init__.py  models.py
app/interfaces/: logger.py  repositories.py
app/translations/: en.json  fi.json
app/use_cases/: __init__.py  word_service.py
docs/adrs/: 001_use_python_in_back_end.md  002_use_uv_for_python_tooling.md  003_use_fastapi_as_backend_framework.md  004_use_types_with_python.md  005_use_docstring_to_document_python_code.md  006_use_csv_for_data.md  007_use_ruff_for_python_linting_and_formating.md  009_use_nextjs_for_ui.md  010_use_typedoc_for_documentation.md  011_use_pyverse_to_generate_class_diagram.md  012_use_markdown_format_for_backend_docs.md  013_use_pdoc3_for_python_documentation.md  014_use_pyreverse_to_generate_diagrams.md  015_use_widdershins_and_curl_to_persist_api_docs.md  016_use_jsdoc_to_document_front_end.md  017_use_typedoc_to_persist_frontend_documentation.md  018_use_categories_to_isolate_unittests_and_e2e.md  (+19 more)
frontend/: .eslintrc.js  babel.config.js  i18n.js  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
tests/: __init__.py  conftest.py  test_word_service.py
(+58 files in other folders)
